Created histograms to investigate Pveto occupancy issue. Changed persistency to give easy access to variables eg, charge, amplitude, energy etc.

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -23,9 +23,10 @@ SignalPostSamples		120
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
 Multihit			0
-MinAmplitude			20
-AmplThrLow			10
+MinAmplitude			20 #18/4/19 - original value = 20
+AmplThrLow			10 #19/4/19 - original value = 10
 AmplThrHigh			20
+ChargeCut			0.001 #Added by Beth 19/4/19.
 
 [TimeCalibration]
 0   7.3
