Added to the ECal Digitizier a class that compensate for out of digitizer window charge. Added a RECO flag to enable and disable this new feature

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -50,6 +50,7 @@ MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
 UseOverSample                   0.
+UseIntegralCorrection		1.
 
 ### for data - on l0padme3
 [RECOCLUSTER]
