Removed mysql library from PadmeReco GNUmakefile

--- a/PadmeReco/GNUmakefile
+++ b/PadmeReco/GNUmakefile
@@ -23,7 +23,7 @@ LIBS += $(addprefix -L,$(addsuffix /lib,$(SUBDIRS))) $(addprefix -l,$(addsuffix 
 #LIBS += -LService/lib -lService$(STATIC)
 LIBS += -LRecoBase/lib -lRecoBase$(STATIC)
 LIBS += -L$(PADMEROOT)/lib -lPadmeRoot
-LIBS += -L/usr/lib64/mysql -lmysqlclient
+#LIBS += -L/usr/lib64/mysql -lmysqlclient
 LIBS += -Llib -lPadmeReco$(STATIC)
 
 
