Added missing energy correction flag and classes in ECal Reconstruction

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -64,7 +64,7 @@ ClusterTLowForHit              -500.
 ClusterTHighForHit              500.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
 ClusterizationAlgo    1
-
+CompensateMissingE    1
 
 [Output]
 Hits            1
