Added saturation correction method to the ECal digitizer

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -51,6 +51,7 @@ AmplThrLow			10
 AmplThrHigh			20
 UseOverSample                   0.
 UseIntegralCorrection		1.
+UseSaturationCorrection		1.
 
 ### for data - on l0padme3
 [RECOCLUSTER]
@@ -71,7 +72,7 @@ Hits            1
 Clusters        1
 
 [EnergyCalibration]
-UseCalibration 2.
+UseCalibration 1.
 AveragepCMeV   15.0
 
 [TimeAlignment]
