Added flag to enable disable analog signal in output file, added exponential correction for the Saturation effects

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -70,6 +70,7 @@ CompensateMissingE    1
 [Output]
 Hits            1
 Clusters        1
+Analog          0 #Save ECal analog signals only if Debug mode is enabled
 
 [EnergyCalibration]
 UseCalibration 1.
