calculating waveform derivative backwards only

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -23,13 +23,13 @@ SignalPostSamples		120
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
+Multihit			0
 #MinAmplitude used ony in single hit mode 
 MinAmplitude			20
 #if Multihit==0, AmplThrLow and AmplThrHigh must be different 
 AmplThrLow			10
 AmplThrHigh			20
-
+ChargeCut			0.003 #beth 23/05/19
 
 
 [TimeCalibration]
