SACCalibration, SAC configuration file uses calibration file n.2

--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -17,7 +17,7 @@ InputImpedance	50
 VoltageBin	0.001
 
 [RECO]
-# signal window is deifined per singol photon in terms of Â±2ns M. Raggi 09/11/2018  
+# signal window is deifined per singol photon in terms of Ã‚Â±2ns M. Raggi 09/11/2018  
 SignalWindow       		2
 SignalPreSamples		30
 SignalPostSamples		120
@@ -44,7 +44,9 @@ Clusters        1
 
 [EnergyCalibration]
 Common_EnergyScale 1.
-CalibrationFile    0
+CalibrationFile    2
+# Decide whether Channel by Channel gains (1=default) or average gain equal to 1 (0) must be used  
+UseIndividualChannelGain 1
 
 
 
