Nominal SAC geometry implemented

--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -49,6 +49,34 @@ CalibrationFile    1
 UseIndividualChannelGain 1
 
 
+[GEOMETRY]
+ComputeFromPrimaryNumbers 1
+LocalOrigineX    0.
+LocalOrigineY    0.
+#LocalOrigineZ    3000.
+# local reference frame of SAC corresponds to the center of the crystal matrix (also in z) to match MC definition
+LocalOrigineZ    3070. 
+LocalAngleXPadmeFrame 0.
+LocalAngleYPadmeFrame 0.
+LocalAngleZPadmeFrame 0.
+#Step1LocalX 20.
+#Step1LocalY 20.
+Step1LocalX 30.15
+Step1LocalY 30.15
+Step1LocalZ 0.
+#
+ChId@LocalX0 22.
+ChId@LocalY0 22.
+ChId@LocalZ0 0.
+#
+ChId@LocalX0Offset 0.
+ChId@LocalY0Offset 0.
+ChId@LocalZ0Offset 0.
+#
+CrystalGap 	.05
+CrystalCoating  .1
+
+
 
 
 
