--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -52,6 +52,8 @@ AmplThrHigh			20
 UseOverSample                   0.
 UseIntegralCorrection		1.
 UseSaturationCorrection		1.
+#value indicates the Zsupp cut used default = 5.
+UseZeroSuppression		5 
 
 ### for data - on l0padme3
 [RECOCLUSTER]
@@ -60,7 +62,7 @@ ClusterDeltaCellMax            3
 ClusterEnergyThresholdForHit   1.
 ClusterEnergyThresholdForSeed  20.
 #### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
-PedestalMode                    0. 
+PedestalMode                    1. 
 ClusterTLowForHit              -500.
 ClusterTHighForHit              500.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
