Added TemplateFitting interface class to the ECal digitizer. The class hosts the template function building and reading methods.

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -54,7 +54,7 @@ UseIntegralCorrection		1.
 UseSaturationCorrection		1.
 #value indicates the Zsupp cut used default = 5.
 UseZeroSuppression		5 
-
+PrepareTemplate                 1
 ### for data - on l0padme3
 [RECOCLUSTER]
 ClusterDeltaTimeMax            500.
@@ -73,6 +73,7 @@ CompensateMissingE    1
 Hits            1
 Clusters        1
 Analog          0 #Save ECal analog signals only if Debug mode is enabled
+Template        0
 
 [EnergyCalibration]
 UseCalibration 1.
