geometry service for all the detectors

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -1,4 +1,3 @@
-
 [DETECTOR]
 NAME    ECal
 READOUT ADC
@@ -49,44 +48,32 @@ Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
-UseOverSample                   0.
-UseIntegralCorrection		1.
-UseSaturationCorrection		1.
-#value indicates the Zsupp cut used default = 5.
-UseZeroSuppression		5 
+#### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
+PedestalMode                    0 
+
 
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            500.
-ClusterDeltaCellMax            3
-ClusterEnergyThresholdForHit   1.
-ClusterEnergyThresholdForSeed  20.
-#### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
-PedestalMode                    1. 
-ClusterTLowForHit              -500.
-ClusterTHighForHit              500.
+ClusterDeltaTimeMax            6.
+ClusterDeltaCellMax            2
+ClusterEnergyThresholdForHit   5.
+ClusterEnergyThresholdForSeed  15.
+ClusterTLowForHit              -200.
+ClusterTHighForHit              250.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
 ClusterizationAlgo    1
-CompensateMissingE    1
+
 
 [Output]
 Hits            1
 Clusters        1
-Analog          0 #Save ECal analog signals only if Debug mode is enabled
-
-[EnergyCalibration]
-UseCalibration 1.
-AveragepCMeV   15.0
-
-[TimeAlignment]
-UseTimeAlignment  0.
-AverageTimeOff    0.0
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
 LocalOrigineX    0.
 LocalOrigineY    0.
-LocalOrigineZ    2300. 
+#LocalOrigineZ   2300. 
+LocalOrigineZ    2440. 
 LocalAngleXPadmeFrame 0.
 LocalAngleYPadmeFrame 0.
 LocalAngleZPadmeFrame 0.
@@ -95,8 +82,14 @@ Step1LocalY 21.
 Step1LocalZ 0.
 ChId@LocalX0 1414
 ChId@LocalY0 1414
-ChId@LocalZ0 1414
+ChId@LocalZ0 0
 ChId@LocalX0Offset 0.
-ChId@LocalY0Offset 0.
+ChId@LocalY0Offset 0
 ChId@LocalZ0Offset 0.
+CrystalGap 	.120
+CrystalCoating  .115
+TedlarThickness	.05
+
+
+
 
