--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -23,13 +23,11 @@ SignalPostSamples		120
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit                        1
-#MinAmplitude used ony in single hit mode
-MinAmplitude                    20
-#if Multihit==0, AmplThrLow and AmplThrHigh must be different
-AmplThrLow                      10
-AmplThrHigh                     20
-
+Multihit			1
+#MinAmplitude			40
+MinAmplitude			20
+AmplThrLow			10
+AmplThrHigh			20
 
 
 [RECOCLUSTER]
@@ -37,12 +35,34 @@ ClusterDeltaTimeMax            5.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
-#ClusterTLowForHit              -100.
-#ClusterTHighForHit              220.
-ClusterTLowForHit              -500.
-ClusterTHighForHit              500.
+ClusterTLowForHit              -100.
+ClusterTHighForHit              220.
 
 [Output]
 Hits            1
 Clusters        1
 
+[TimeCalibration]
+#Common_t0  0.
+#t0_01  0.
+#t0_90  10.
+#t0_91  10.
+
+
+[GEOMETRY]
+ComputeFromPrimaryNumbers 1
+LocalOrigineX    -182.5
+LocalOrigineY    0.
+LocalOrigineZ    0. 
+LocalAngleXPadmeFrame 0.
+LocalAngleYPadmeFrame 0.
+LocalAngleZPadmeFrame 0.
+Step1LocalX 0.
+Step1LocalY 0.
+Step1LocalZ 11.
+ChId@LocalX0 0.
+ChId@LocalY0 0.
+ChId@LocalZ0 48.
+ChId@LocalX0Offset 0.
+ChId@LocalY0Offset 0.
+ChId@LocalZ0Offset 0.
