--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -24,9 +24,7 @@ PedestalOffset     		50
 NumberOfSamplesPedestal		50
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
 Multihit			1
-#MinAmplitude used ony in single hit mode 
 MinAmplitude			20
-#if Multihit==0, AmplThrLow and AmplThrHigh must be different 
 AmplThrLow			10
 AmplThrHigh			20
 
@@ -45,10 +43,29 @@ ClusterDeltaTimeMax            5.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
-ClusterTLowForHit              -500.
-ClusterTHighForHit              500.
-#ClusterTHighForHit              300.
+ClusterTLowForHit              -100.
+#ClusterTHighForHit              180.
+ClusterTHighForHit              300.
 
 [Output]
 Hits            1
 Clusters        1
+
+
+[GEOMETRY]
+ComputeFromPrimaryNumbers 1
+LocalOrigineX    182.5
+LocalOrigineY    0.
+LocalOrigineZ    0. 
+LocalAngleXPadmeFrame 0.
+LocalAngleYPadmeFrame 0.
+LocalAngleZPadmeFrame 0.
+Step1LocalX 0.
+Step1LocalY 0.
+Step1LocalZ 11.
+ChId@LocalX0 0.
+ChId@LocalY0 0.
+ChId@LocalZ0 48.
+ChId@LocalX0Offset 0.
+ChId@LocalY0Offset 0.
+ChId@LocalZ0Offset 0.
