--- a/PadmeReco/config/Target.cfg
+++ b/PadmeReco/config/Target.cfg
@@ -120,4 +120,23 @@ CMNS_offBeamIdForY 1
 # CCD [in microns] // 12.=default
 CCD 12.
 
+[GEOMETRY]
+ComputeFromPrimaryNumbers 1
+LocalOrigineX    0.
+LocalOrigineY    0.
+LocalOrigineZ    -1030. 
+LocalAngleXPadmeFrame 0.
+LocalAngleYPadmeFrame 0.
+LocalAngleZPadmeFrame 0.
+Step1LocalX 1.
+Step1LocalY 1.
+Step1LocalZ 0.
+ChId@LocalX0 9
+ChId@LocalY0 25
+ChId@LocalZ0 0
+ChId@LocalX0Offset 0.
+ChId@LocalY0Offset 0.
+ChId@LocalZ0Offset 0.
+#Ruler 51 Run2018, Ruler 52 Run2019
+Ruler   51
 
