--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -65,7 +65,9 @@ Step1LocalY 0.
 Step1LocalZ 11.
 ChId@LocalX0 0.
 ChId@LocalY0 0.
-ChId@LocalZ0 48.
+#ChId@LocalZ0 48.
+ChId@LocalZ0 0.
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
-ChId@LocalZ0Offset 0.
+#ChId@LocalZ0Offset 0.
+ChId@LocalZ0Offset -472.55
