modified distance for ECal

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -73,7 +73,8 @@ ComputeFromPrimaryNumbers 1
 LocalOrigineX    0.
 LocalOrigineY    0.
 #LocalOrigineZ   2300. 
-LocalOrigineZ    2440. 
+#LocalOrigineZ    2440. 
+LocalOrigineZ    2555. 
 LocalAngleXPadmeFrame 0.
 LocalAngleYPadmeFrame 0.
 LocalAngleZPadmeFrame 0.
