inserted Crystal Width in file cfg SAC and ECal

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -78,8 +78,9 @@ LocalOrigineZ    2555.
 LocalAngleXPadmeFrame 0.
 LocalAngleYPadmeFrame 0.
 LocalAngleZPadmeFrame 0.
-Step1LocalX 21.
-Step1LocalY 21.
+#
+Step1LocalX 21.45
+Step1LocalY 21.45
 Step1LocalZ 0.
 ChId@LocalX0 1414
 ChId@LocalY0 1414
@@ -87,6 +88,8 @@ ChId@LocalZ0 0
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0
 ChId@LocalZ0Offset 0.
+#
+CrystalWidth	 21.
 CrystalGap 	.120
 CrystalCoating  .115
 TedlarThickness	.05
