--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -17,7 +17,7 @@ InputImpedance	50
 VoltageBin	0.001
 
 [RECO]
-# signal window is deifined per singol photon in terms of ±2ns M. Raggi 09/11/2018  
+# signal window is deifined per singol photon in terms of Ã‚Â±2ns M. Raggi 09/11/2018  
 SignalWindow       		2
 SignalPreSamples		30
 SignalPostSamples		120
@@ -33,8 +33,8 @@ ClusterDeltaTimeMax            1.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
-ClusterTLowForHit              -100.
-ClusterTHighForHit              200.
+ClusterTLowForHit              -500.
+ClusterTHighForHit              500.
 #ClusterizationAlgo    1[Simple/SAC] 2[Simple/Base] 
 ClusterizationAlgo    2
 
@@ -44,28 +44,36 @@ Clusters        1
 
 [EnergyCalibration]
 Common_EnergyScale 1.
-CalibrationFile    0
+CalibrationFile    3
+# Decide whether Channel by Channel gains (1=default) or average gain equal to 1 (0) must be used  
+UseIndividualChannelGain 1
+
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
 LocalOrigineX    0.
 LocalOrigineY    0.
-#LocalOrigineZ    3000. 
+#LocalOrigineZ    3000.
+# local reference frame of SAC corresponds to the center of the crystal matrix (also in z) to match MC definition
 LocalOrigineZ    3070. 
 LocalAngleXPadmeFrame 0.
 LocalAngleYPadmeFrame 0.
 LocalAngleZPadmeFrame 0.
 #Step1LocalX 20.
 #Step1LocalY 20.
-Step1LocalX 30.
-Step1LocalY 30.
+Step1LocalX 30.25
+Step1LocalY 30.25
 Step1LocalZ 0.
+#
 ChId@LocalX0 22.
 ChId@LocalY0 22.
 ChId@LocalZ0 0.
+#
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
 ChId@LocalZ0Offset 0.
+#
+CrystalWidth	 30.
 CrystalGap 	.05
 CrystalCoating  .1
 
