Implemented better SAC and ECal geometry

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -89,10 +89,13 @@ ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0
 ChId@LocalZ0Offset 0.
 #
-CrystalWidth	 21.
+CrystalSizeX	 21.
+CrystalSizeY	 21.
+CrystalSizeZ	 230.
 CrystalGap 	.120
 CrystalCoating  .115
 TedlarThickness	.05
+ECalFrontFacePosZ 2440.
 
 
 
