Implemented better SAC and ECal geometry

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -88,7 +88,7 @@ ChId@LocalZ0 0
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0
 ChId@LocalZ0Offset 0.
-#
+#in line with MC Geometry
 CrystalSizeX	 21.
 CrystalSizeY	 21.
 CrystalSizeZ	 230.
