--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -72,10 +72,13 @@ ChId@LocalZ0 0.
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
 ChId@LocalZ0Offset 0.
-#
-CrystalWidth	 30.
+#in line with MC Geometry
+CrystalSizeX	 30.
+CrystalSizeY	 30.
+CrystalSizeZ	 140.
 CrystalGap 	.05
 CrystalCoating  .1
+SACFrontFacePosZ 3000.  
 
 
 
