Implemented better vetoes geometry

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -68,3 +68,9 @@ ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
 #ChId@LocalZ0Offset 0.
 ChId@LocalZ0Offset -472.55
+#in line with MC Geometry
+FingerSizeX  10.
+FingerSizeY  178.
+FingerSizeZ  10.
+EVetoInnerFacePosX  -177.5 
+EVetoFrontFacePosZ  -472.55
