--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -71,3 +71,9 @@ ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
 #ChId@LocalZ0Offset 0.
 ChId@LocalZ0Offset -472.55
+#in line with MC Geometry
+FingerSizeX  10.
+FingerSizeY  178.
+FingerSizeZ  10.
+PVetoInnerFacePosX  177.5 
+PVetoFrontFacePosZ -472.55
