--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -58,3 +58,8 @@ ChId@LocalZ0 0.
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
 ChId@LocalZ0Offset 0.
+#in line with MC Geometry
+FingerSizeX  10.
+FingerSizeY  178.
+FingerSizeZ  10.
+
