fix ECAl configuration to select appropriate calib file

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -62,7 +62,7 @@ ClusterDeltaCellMax            3
 ClusterEnergyThresholdForHit   1.
 ClusterEnergyThresholdForSeed  20.
 #### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
-PedestalMode                    1. 
+PedestalMode                    0
 ClusterTLowForHit              -500.
 ClusterTHighForHit              500.
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
@@ -75,7 +75,7 @@ Clusters        1
 Analog          0 #Save ECal analog signals only if Debug mode is enabled
 
 [EnergyCalibration]
-UseCalibration 1.
+UseCalibration 2
 AveragepCMeV   15.0
 
 [TimeAlignment]
