work in progress on geometry for HEPVeto Hits

--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -43,21 +43,21 @@ Clusters        1
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
-LocalOrigineX    0.
+LocalOrigineX    870.
 LocalOrigineY    0.
-LocalOrigineZ    0. 
+LocalOrigineZ    2095. 
 LocalAngleXPadmeFrame 0.
-LocalAngleYPadmeFrame 0.
+LocalAngleYPadmeFrame 1.2663
 LocalAngleZPadmeFrame 0.
 Step1LocalX 0.
 Step1LocalY 0.
 Step1LocalZ 11.
 ChId@LocalX0 0.
 ChId@LocalY0 0.
-ChId@LocalZ0 0.
+ChId@LocalZ0 7.
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
-ChId@LocalZ0Offset 0.
+ChId@LocalZ0Offset -5.05
 #in line with MC Geometry
 FingerSizeX  10.
 FingerSizeY  178.
