NOTE: Monitor option enables/disables analysis and histogramming in RECO

--- a/PadmeReco/config/PadmeReconstruction.cfg
+++ b/PadmeReco/config/PadmeReconstruction.cfg
@@ -19,6 +19,8 @@ Target  1
 [RUNNINGMODE]
 Pedestals   0
 Reconstruct 1
-Monitor     0
+#Call the Analysis method in the reconstructions for histogramming
+Monitor     1
+#------------------
 Cosmics     0
 Debug       0
