PadmeTrig: fixed Config.c and updated example standalone.cfg

--- a/PadmeTrig/standalone.cfg
+++ b/PadmeTrig/standalone.cfg
@@ -9,11 +9,10 @@ trigger_mask 0x81
 # Mask 0x02 = 0000 0010: enable cosmics trigger
 #trigger_mask 0x02
 
-# Get all BTF triggers, set autopass every 10 events
-trig0_scale_global 1
+# Set autopass for trigger 0 (BTF) to 1 every 10 events
 trig0_scale_autopass 10
 
-# Downscale correlated trigger to 1 over 10, always set autopass
+# Downscale trigger 7 (correlated trigger) to 1 over 10, always set autopass
 trig7_scale_global 10
 trig7_scale_autopass 1
 
@@ -24,9 +23,14 @@ trig7_scale_autopass 1
 # Set correlated trigger delay to 900us
 correlated_trigger_delay 900
 
-# Timepix3 setup (show default values)
-#timepix_shutter_delay 0x02
-#timepix_shutter_width 0xff
+# Timepix3 delay wrt BTF trigger (not really needed)
+#timepix_shutter_delay 0x00
+
+# Timepix3 shutter opening width (0x64=100=10us)
+#timepix_shutter_width 0x64
+
+# Trigger distribution delay wrt BTF trigger (default: 0x7E=126=1.575us)
+#trigger0_delay 0x7E
 
 # Setup to run in standalone mode
 run_number 0
