--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -23,13 +23,14 @@ SignalPostSamples		120
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
+Multihit			0
 #MinAmplitude used ony in single hit mode 
 MinAmplitude			20
 #if Multihit==0, AmplThrLow and AmplThrHigh must be different 
 AmplThrLow			10
 AmplThrHigh			20
-
+NewPed                          1 #use pedestals from samples before maximum amplitude or from first 200 samples? 0 = around max, 1 = first 200
+TimeCut                         0 #use timecut of 10ns? 0 = no, 1 = yes
 
 
 [TimeCalibration]
