Configuration files for the test production on primary positron data

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -52,19 +52,21 @@ AmplThrHigh			20
 PedestalMode                    0 
 
 
+
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            6.
-ClusterDeltaCellMax            2
-ClusterEnergyThresholdForHit   5.
-ClusterEnergyThresholdForSeed  15.
+ClusterDeltaTimeMax            150.
+ClusterDeltaCellMax            3
+ClusterEnergyThresholdForHit   1.
+ClusterEnergyThresholdForSeed  20.
 ClusterTLowForHit              -500.
 ClusterTHighForHit              500.
 #### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
 PedestalMode                    0
 #ClusterizationAlgo    1[Simple/ECAL] 2[Simple/Base] 3[Island] 4[Radius]
 ClusterizationAlgo    1
-
+#Timing algorithm     0 [Weighted average],  1 [Time of the SEED]  
+ClusterTimeAlgo	      1
 
 [Output]
 Hits            1
