Implementing digital processing, PVeto.cfg flag for processing type required, and histograms to analyse the success of the veto reconstruction process

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -17,117 +17,24 @@ InputImpedance	50
 VoltageBin	0.000244
 
 [RECO]
-SignalWindow                   151
-SignalPreSamples               30
-SignalPostSamples              120
+SignalWindow       		151
+SignalPreSamples		30
+SignalPostSamples		120
 PedestalOffset     		50
-NumberOfSamplesPedestal		50
-#Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
+NumberOfSamplesPedestal		50  
+#Processing [0- SingleHit, 1- Multihit with TSpectrum, 2- RC processing followed by TSpectrum]
+Processing			0
+#MinAmplitude used ony in single hit mode 
 MinAmplitude			20
+#if Processing==0, AmplThrLow and AmplThrHigh must be different 
 AmplThrLow			10
 AmplThrHigh			20
-
+NewPed                          1 #use pedestals from samples before maximum amplitude or from first 200 samples? 0 = around max, 1 = first 200
+TimeCut			0
 
 
 [TimeCalibration]
-Common_t0  0.
-t0_0  0.
-t0_1  -0.310172
-t0_2  0.121249
-t0_3  -0.247052
-t0_4  -0.157618
-t0_5  -0.293280
-t0_6  -0.118991
-t0_7  0.212889
-t0_8  -0.107553
-t0_9  -0.369732
-t0_10  0.168284
-t0_11  -0.010661
-t0_12  -0.067076
-t0_13  -0.452233
-t0_14  -0.283537
-t0_15  -0.224673
-t0_16  -0.232714
-t0_17  -0.603791
-t0_18  -0.264062
-t0_19  -0.560891
-t0_20  -0.449292
-t0_21  -0.642559
-t0_22  -0.693545
-t0_23  -0.660729
-t0_24  -0.999697
-t0_25  -1.354069
-t0_26  -1.425558
-t0_27  -1.449183
-t0_28  -1.725291
-t0_29  -1.560595
-t0_30  -1.747452
-t0_31  -2.214123
-t0_32  -2.080246
-t0_33  -2.222488
-t0_34  -2.309014
-t0_35  -2.319049
-t0_36  -2.979443
-t0_37  -2.885076
-t0_38  -2.793347
-t0_39  -2.737924
-t0_40  -3.070128
-t0_41  -3.339260
-t0_42  -3.462260
-t0_43  -3.408190
-t0_44  -3.590468
-t0_45  -3.807832
-t0_46  -3.626128
-t0_47  -3.435587
-t0_48  -6.660007
-t0_49  -6.688598
-t0_50  -6.313409
-t0_51  -6.750271
-t0_52  -6.714454
-t0_53  -6.623679
-t0_54  -6.670201
-t0_55  -6.691846
-t0_56  -7.139451
-t0_57  -7.493685
-t0_58  -6.984883
-t0_59  -7.633519
-t0_60  -7.421703
-t0_61  -7.737984
-t0_62  -7.571681
-t0_63  -7.934764
-t0_64  -8.512551
-t0_65  -8.563825
-t0_66  -8.496834
-t0_67  -8.811448
-t0_68  -8.866688
-t0_69  -8.494397
-t0_70  -8.434211
-t0_71  -8.080711
-t0_72  -9.043618
-t0_73  -9.419362
-t0_74  -9.797722
-t0_75  -10.041366
-t0_76  -10.268302
-t0_77  -10.277800
-t0_78  -10.179073
-t0_79  -10.025416
-t0_80  -11.126344
-t0_81  -11.034357
-t0_82  -11.042541
-t0_83  -11.557363
-t0_84  -11.602454
-t0_85  -11.471241
-t0_86  -11.913219
-t0_87  -12.477117
-t0_88  -13.625404
-t0_89  -15.134064
-t0_90  -13.072010
-t0_91  -8.477386
-t0_92  -8.477386
-t0_93  -8.477386
-t0_94  -8.477386
-t0_95  -8.477386
+0   7.3
 
 
 [ChargeCalibration]
@@ -139,37 +46,10 @@ ClusterDeltaTimeMax            5.
 ClusterDeltaCellMax            2
 ClusterEnergyThresholdForHit   2.
 ClusterEnergyThresholdForSeed  3.
-ClusterTLowForHit              -100.
-#ClusterTHighForHit              180.
-ClusterTHighForHit              300.
+ClusterTLowForHit              -500.
+ClusterTHighForHit              500.
+#ClusterTHighForHit              300.
 
 [Output]
 Hits            1
 Clusters        1
-
-
-[GEOMETRY]
-ComputeFromPrimaryNumbers 1
-LocalOrigineX    182.5
-LocalOrigineY    0.
-LocalOrigineZ    0. 
-LocalAngleXPadmeFrame 0.
-LocalAngleYPadmeFrame 0.
-LocalAngleZPadmeFrame 0.
-Step1LocalX 0.
-Step1LocalY 0.
-Step1LocalZ 11.
-ChId@LocalX0 0.
-ChId@LocalY0 0.
-#ChId@LocalZ0 48.
-ChId@LocalZ0 0.
-ChId@LocalX0Offset 0.
-ChId@LocalY0Offset 0.
-#ChId@LocalZ0Offset 0.
-ChId@LocalZ0Offset -472.55
-#in line with MC Geometry
-FingerSizeX  10.
-FingerSizeY  178.
-FingerSizeZ  10.
-PVetoInnerFacePosX  177.5 
-PVetoFrontFacePosZ -472.55
