Changed DigitizerChannelReco.cc to allow the name of the debugging root file to include the detector name. Changed EVeto.cfg & HEPVeto.cfg to match the structure of PVeto.cfg allowing digital processing & debugging histograms in all veto detctors

--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -22,12 +22,14 @@ SignalPreSamples		30
 SignalPostSamples		150
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
-#Multihit [0- SingleHit, 1- Multihit with TSpectrum]
-Multihit			1
+#Processing [0- SingleHit, 1- Multihit with TSpectrum, 2- RC processing followed by TSpectrum]
+Processing			2
 #MinAmplitude			30
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
+NewPed                          1 #use pedestals from samples before maximum amplitude or from first 200 samples? 0 = around max, 1 = first 200
+TimeCut				0
 
 [RECOCLUSTER]
 ClusterDeltaTimeMax            5.
