--- a/PadmeMC/vis.mac.example
+++ b/PadmeMC/vis.mac.example
@@ -32,10 +32,10 @@
 # RootIO settings
 
 # Output root file with MC hits
-#/output/DataFileName mcdata.root
+#/output/DataFileName MCData.root
 
 # Output root file with analysis histograms/ntuple
-#/output/HistoFileName mchisto.root
+#/output/HistoFileName UBTF.root
 
 # Disable/enable SAC/ECal analysis (WARNING! For SAC see command documentation)
 #/analysis/DisableSACAnalysis true
@@ -43,7 +43,7 @@
 
 # Disable/enable saving to Fast analysis Tree U102
 # uses conditions on ECal Energy, SAC energy, Hit in the Veto
-#/analysis/SaveEcal  false
+#/analysis/SaveEcal  true
 #/analysis/SaveSAC   false
 #/analysis/SaveVeto  false
 
@@ -57,13 +57,13 @@
 #/output/EnableDetectorIO TPix:D
 
 # Disable IO for single detectors
-/output/DisableDetectorIO Target
-/output/DisableDetectorIO PVeto
-/output/DisableDetectorIO EVeto
-/output/DisableDetectorIO HEPVeto
-/output/DisableDetectorIO ECal
-/output/DisableDetectorIO SAC
-/output/DisableDetectorIO TPix
+#/output/DisableDetectorIO Target
+#/output/DisableDetectorIO PVeto
+#/output/DisableDetectorIO EVeto
+#/output/DisableDetectorIO HEPVeto
+#/output/DisableDetectorIO ECal
+#/output/DisableDetectorIO SAC
+#/output/DisableDetectorIO TPix
 
 # Detector settings
 
@@ -77,11 +77,10 @@
 #/Detector/EnableSubDetector HEPVeto
 #/Detector/EnableSubDetector TDump
 #/Detector/EnableSubDetector TPix
-#/Detector/EnableSubDetector Tungsten
 
-#/Detector/EnableStructure Wall
 #/Detector/EnableStructure Magnet
 #/Detector/EnableStructure Chamber
+#/Detector/EnableStructure BeamLine
 
 #/Detector/DisableSubDetector ECal
 #/Detector/DisableSubDetector Target
@@ -91,17 +90,22 @@
 #/Detector/DisableSubDetector HEPVeto
 #/Detector/DisableSubDetector TDump
 #/Detector/DisableSubDetector TPix
-#/Detector/DisableSubDetector Tungsten
 
-#/Detector/DisableStructure Wall
 #/Detector/DisableStructure Magnet
 #/Detector/DisableStructure Chamber
+#/Detector/DisableStructure BeamLine
+
+#/Detector/WorldIsAir
+#/Detector/WorldIsVacuum
 
 #/Detector/SetMagnetVisible
 #/Detector/SetMagnetInvisible
 
 #/Detector/SetChamberVisible
 #/Detector/SetChamberInvisible
+
+#/Detector/SetBeamLineVisible
+#/Detector/SetBeamLineInvisible
 
 #/Detector/EnableMagneticField
 #/Detector/DisableMagneticField
@@ -111,24 +115,17 @@
 #/Detector/SetMagneticVolumeInvisible
 
 # Beam line settings
-#/Detector/EnableStructure BeamLine
-#/Detector/DisableStructure BeamLine
-#/Detector/SetBeamLineVisible
-#/Detector/SetBeamLineInvisible
 #/Detector/BeamLine/EnableBeWindow true
 #/Detector/BeamLine/DHST002_FieldY -1.055 tesla
 #/Detector/BeamLine/EnableQuadrupoles false
 #/Detector/BeamLine/Q1_FieldGrad 5.
 #/Detector/BeamLine/Q2_FieldGrad 5.
 
-#/Detector/WorldIsAir
-#/Detector/WorldIsVacuum
-
 #/Detector/Target/VerboseLevel 0
 #/Detector/Target/FrontFaceZ -103. cm
 #/Detector/Target/Size 2. cm
 #/Detector/Target/Thickness 100. um
-/Detector/Target/EnableFastDigitization
+#/Detector/Target/EnableFastDigitization
 #/Detector/Target/DisableFastDigitization
 #/Detector/Target/EnableSaveWaveformToDigi
 #/Detector/Target/DisableSaveWaveformToDigi
@@ -156,11 +153,6 @@
 #/Detector/SAC/CrystalCoating 100. um
 #/Detector/SAC/FrontFaceZ 300. cm
 
-#/Detector/LAV/InnerRadius 5.1
-#/Detector/LAV/OuterRadius 12.
-#/Detector/LAV/ZLength 20.
-#/Detector/LAV/FrontFaceZ -60.
-
 #/Detector/PVeto/VerboseLevel 0
 #/Detector/PVeto/FrontFaceZ -47.255
 #/Detector/PVeto/InnerFaceX 17.75
@@ -186,14 +178,9 @@
 #/Detector/TPix/NColumns 6
 #/Detector/TPix/DistanceToCorner 29.73 cm
 
-#/Detector/TDump/TargetRadius 3.5
-#/Detector/TDump/TargetLength 6.0
-#/Detector/TDump/TargetFrontFaceZ 10.
-#/Detector/TDump/FrontFaceZ -180.
-
 # Beam setup
 
-# Primary positrons setup
+# Primary positrons setup (default PADMEMC configuration)
 #/beam/n_e+_per_bunch 25000
 #/beam/n_e+_poisson_on true
 #/beam/bunch_structure_on true
@@ -206,13 +193,24 @@
 #/beam/position_spread_on true
 #/beam/position_x_spread 1. mm
 #/beam/position_y_spread 1. mm
-#/beam/momentum 550. MeV
+#/beam/momentum 545. MeV
 #/beam/momentum_spread_on true
-#/beam/momentum_spread 5.5 MeV
+#/beam/momentum_spread 5.45 MeV
 #/beam/direction 0. 0. 1.
 #/beam/emittance_on true
 #/beam/emittance_x 1. mrad
 #/beam/emittance_y 1. mrad
+#/beam/n_uboson_per_bunch 0
+#/beam/uboson_mass 22. MeV
+#/beam/n_3g_per_bunch 0
+#/beam/3g_file ThreePhotonDecays.list
+#/beam/n_2g_per_bunch 0
+#/beam/2g_file TwoPhotonDecays.list
+#/beam/calibration false
+#/beam/calib_energy 50. MeV
+#/beam/calib_x 14. cm
+#/beam/calib_y 14. cm
+#/beam/calib_radius 1. cm
 
 # Beam Line studies: position beam at Be window
 #/beam/position_x 2247.67 mm
@@ -238,8 +236,8 @@
 #/beam/n_2g_per_bunch 1
 #/beam/2g_file ee-gg_550MeV-10M.txt
 
-# Calibration run setup: single photon pointing to ECal front face
-#/beam/calibration false
+# Calibration run setup: single 50MeV photon pointing to a spot on ECal front face
+#/beam/calibration true
 #/beam/calib_energy 50. MeV
 #/beam/calib_x 14. cm
 #/beam/calib_y 14. cm
