Added energy vetoes calibration

--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -142,6 +142,10 @@ t0_94  2.224122
 t0_95  2.401980
 
 
+[EnergyCalibration]
+Common_EnergyScale 1.
+CalibrationFile 1
+
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
