--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -41,6 +41,11 @@ ClusterTHighForHit              180.
 Hits            1
 Clusters        1
 
+
+[EnergyCalibration]
+Common_EnergyScale 1.
+CalibrationFile 1
+
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
 LocalOrigineX    870.
