--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -130,6 +130,11 @@ t0_94  -8.477386
 t0_95  -8.477386
 
 
+
+[EnergyCalibration]
+Common_EnergyScale 1.
+CalibrationFile 1
+
 [ChargeCalibration]
 
 
