--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -10,7 +10,8 @@ ID    13
 #Format of the next lines: ADC$ID - list of channels
 #ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
 #ADC13 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16
-ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 19 18 17 16 23 22 21 20 27 26 25 24 31 30 29 28 
+#ADC13 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 19 18 17 16 23 22 21 20 27 26 25 24 31 30 29 28 
+ADC13  15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 0 28 29 30 31 24 25 26 27 20 21 22 23 16 17 18 19
 #Note the following variables should be equavalent for all the ADCs of a given detector
 TimeBin		0.4
 InputImpedance	50
@@ -28,6 +29,7 @@ Multihit			1
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
+UsePulseProcessing		0
 
 [RECOCLUSTER]
 ClusterDeltaTimeMax            5.
@@ -71,4 +73,42 @@ ChId@LocalZ0Offset -5.05
 FingerSizeX  10.
 FingerSizeY  178.
 FingerSizeZ  10.
+
+
+
+
+[TimeCalibration]
+Common_t0  -34.4
+t0_0 30.2537 
+t0_1 30.2539 
+t0_2 30.707 
+t0_3 30.7115 
+t0_4 30.5433 
+t0_5 30.5275 
+t0_6 30.9547 
+t0_7 31.044 
+t0_8 30.6099 
+t0_9 30.6171 
+t0_10 30.8307 
+t0_11 31.2218 
+t0_12 30.5636 
+t0_13 30.576 
+t0_14 30.8212 
+t0_15 30.9404 
+t0_16 29.971 
+t0_17 30.1335 
+t0_18 29.7403 
+t0_19 29.6162 
+t0_20 30.1431 
+t0_21 29.7918 
+t0_22 29.4913 
+t0_23 29.6168 
+t0_24 30.3958 
+t0_25 30.3656 
+t0_26 30.0617 
+t0_27 30.0977 
+t0_28 30.4696 
+t0_29 30.4338 
+t0_30 29.9901 
+t0_31 30.0797
 
