Added Time constants

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -82,6 +82,10 @@ CalibVersion   3
 UseTimeAlignment  0.
 AverageTimeOff    0.0
 
+[TimeCalibration]
+Common_t0  22.74
+
+
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
 LocalOrigineX    0.
@@ -110,6 +114,8 @@ CrystalGap 	.120
 CrystalCoating  .115
 TedlarThickness	.05
 ECalFrontFacePosZ 2440.
+
+
 
 
 
