choose ECAl latest calib constants; fix angle of HEPVeto in reco; fix chId of recoHits converted from digits (not increasing with z in the past)

--- a/PadmeReco/config/HEPVeto.cfg
+++ b/PadmeReco/config/HEPVeto.cfg
@@ -54,10 +54,11 @@ LocalOrigineX    870.
 LocalOrigineY    0.
 LocalOrigineZ    2095. 
 LocalAngleXPadmeFrame 0.
+LocalAngleYPadmeFrame  -1.30899694
 #LocalAngleYPadmeFrame 3.438299
 #LocalAngleYPadmeFrame 1.9100889
 #LocalAngleYPadmeFrame 1.2663
-LocalAngleYPadmeFrame  0.2617994
+#LocalAngleYPadmeFrame  0.2617994
 #LocalAngleYPadmeFrame 0.
 LocalAngleZPadmeFrame 0.
 Step1LocalX 0.
