--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -50,12 +50,14 @@ AmplThrLow			10
 AmplThrHigh			20
 #### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
 PedestalMode                    0 
+UseIntegralCorrection           1
+UseSaturationCorrection         1
 
 
 
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            150.
+ClusterDeltaTimeMax            6.
 ClusterDeltaCellMax            3
 ClusterEnergyThresholdForHit   1.
 ClusterEnergyThresholdForSeed  20.
