--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -50,13 +50,15 @@ AmplThrLow			10
 AmplThrHigh			20
 #### PedestalMode: 0(default)= pedestal computed with 200 initial samples; 1=pedestals read from files
 PedestalMode                    0 
+UseIntegralCorrection           1
+UseSaturationCorrection         1
 
 
 
 ### for data - on l0padme3
 [RECOCLUSTER]
-ClusterDeltaTimeMax            150.
-ClusterDeltaCellMax            2
+ClusterDeltaTimeMax            6.
+ClusterDeltaCellMax            3
 ClusterEnergyThresholdForHit   1.
 ClusterEnergyThresholdForSeed  20.
 ClusterTLowForHit              -500.
@@ -76,11 +78,15 @@ Analog          0 #Save ECal analog signals only if Debug mode is enabled
 [EnergyCalibration]
 UseCalibration 2
 AveragepCMeV   15.0
-CalibVersion   2
+CalibVersion   4
 
 [TimeAlignment]
 UseTimeAlignment  0.
 AverageTimeOff    0.0
+
+[TimeCalibration]
+Common_t0  22.74
+
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
@@ -110,7 +116,4 @@ CrystalGap 	.120
 CrystalCoating  .115
 TedlarThickness	.05
 ECalFrontFacePosZ 2440.
-
-
-
 
