--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -76,8 +76,10 @@ Clusters        1
 Analog          0 #Save ECal analog signals only if Debug mode is enabled
 
 [EnergyCalibration]
+#UseCalibration = 0 or >0; either calibration is used or not 
 UseCalibration 2
 AveragepCMeV   15.0
+#CalibVersion = 0 => time dependent choice of the calibration constants; otherwise a specific calibration file is used 
 CalibVersion   4
 
 [TimeAlignment]
