ECal multihit in MC as for data-multihit test reconstruction

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -44,7 +44,9 @@ SignalPreSamples		50
 SignalPostSamples		1024
 PedestalOffset     		50
 NumberOfSamplesPedestal		50
-Multihit			0
+### Multihit = 0 (reco single hit / channel); 1 (mulihit)
+### In MC Multihit = 0 (reco single hit / channel); 1 (ideal multihit);  2 (mulihit with E>20 MeV for hits next to first); -2 (single hit with time compression)
+Multihit			2
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
