--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -122,6 +122,97 @@ t0_87 -5.8411
 t0_88 -6.11007
 t0_89 -5.8455
 
+t0MC_0	-11.2851
+t0MC_1	-11.2611
+t0MC_2	-11.2398
+t0MC_3	-11.2405
+t0MC_4	-11.2438
+t0MC_5	-11.2288
+t0MC_6	-11.221
+t0MC_7	-11.2278
+t0MC_8	-11.2232
+t0MC_9	-11.2312
+t0MC_10	-11.243
+t0MC_11	-11.2173
+t0MC_12	-11.1854
+t0MC_13	-10.8579
+t0MC_14	-10.8331
+t0MC_15	-10.7979
+t0MC_16	-10.7822
+t0MC_17	-10.771
+t0MC_18	-10.7501
+t0MC_19	-10.7334
+t0MC_20	-10.7323
+t0MC_21	-10.7203
+t0MC_22	-10.7206
+t0MC_23	-10.7263
+t0MC_24	-10.722
+t0MC_25	-10.7247
+t0MC_26	-10.6985
+t0MC_27	-10.6539
+t0MC_28	-10.3904
+t0MC_29	-10.3651
+t0MC_30	-10.3336
+t0MC_31	-10.3071
+t0MC_32	-10.281
+t0MC_33	-10.2591
+t0MC_34	-10.2428
+t0MC_35	-10.2236
+t0MC_36	-10.2117
+t0MC_37	-10.2122
+t0MC_38	-10.2089
+t0MC_39	-10.2048
+t0MC_40	-10.1855
+t0MC_41	-10.1351
+t0MC_42	-10.0721
+t0MC_43	-9.92566
+t0MC_44	-9.88869
+t0MC_45	-9.85541
+t0MC_46	-9.82251
+t0MC_47	-9.78687
+t0MC_48	-9.767
+t0MC_49	-9.75742
+t0MC_50	-9.74996
+t0MC_51	-9.74124
+t0MC_52	-9.73377
+t0MC_53	-9.72275
+t0MC_54	-9.66685
+t0MC_55	-9.60124
+t0MC_56	-9.54094
+t0MC_57	-9.45009
+t0MC_58	-9.41204
+t0MC_59	-9.37711
+t0MC_60	-9.29491
+t0MC_61	-9.2783
+t0MC_62	-9.26523
+t0MC_63	-9.25509
+t0MC_64	-9.24662
+t0MC_65	-9.23878
+t0MC_66	-9.23096
+t0MC_67	-9.21851
+t0MC_68	-9.14653
+t0MC_69	-9.08211
+t0MC_70	-8.97168
+t0MC_71	-8.88936
+t0MC_72	-8.81954
+t0MC_73	-8.78099
+t0MC_74	-8.75768
+t0MC_75	-8.74457
+t0MC_76	-8.73246
+t0MC_77	-8.72343
+t0MC_78	-8.71862
+t0MC_79	-8.71677
+t0MC_80	-8.72236
+t0MC_81	-8.72322
+t0MC_82	-8.69653
+t0MC_83	-8.65476
+t0MC_84	-8.33042
+t0MC_85	-8.30156
+t0MC_86	-8.28066
+t0MC_87	-8.26428
+t0MC_88	-8.24944
+t0MC_89	-8.24165
+
 [EnergyCalibration]
 Common_EnergyScale 1.
 CalibrationFile 1
@@ -146,7 +237,8 @@ Clusters        1
 
 [GEOMETRY]
 ComputeFromPrimaryNumbers 1
-LocalOrigineX    182.5
+#LocalOrigineX    182.5
+LocalOrigineX    192.5
 LocalOrigineY    0.
 LocalOrigineZ    0. 
 LocalAngleXPadmeFrame 0.
@@ -162,10 +254,12 @@ ChId@LocalZ0 0.
 ChId@LocalX0Offset 0.
 ChId@LocalY0Offset 0.
 #ChId@LocalZ0Offset 0.
-ChId@LocalZ0Offset -472.55
+#ChId@LocalZ0Offset -472.55
+ChId@LocalZ0Offset -446.55
 #in line with MC Geometry
 FingerSizeX  10.
 FingerSizeY  178.
 FingerSizeZ  10.
 PVetoInnerFacePosX  177.5 
-PVetoFrontFacePosZ -472.55
+#PVetoFrontFacePosZ -472.55
+PVetoFrontFacePosZ -446.55
