--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -25,6 +25,8 @@ PedestalOffset     		50
 NumberOfSamplesPedestal		50
 Multihit			1
 MinAmplitude			40
+#AmplThrLow			10
+#AmplThrHigh			20
 AmplThrLow			10
 AmplThrHigh			20
 
@@ -44,7 +46,7 @@ Clusters        1
 
 [EnergyCalibration]
 Common_EnergyScale 1.
-CalibrationFile    0
+CalibrationFile    8
 # Decide whether Channel by Channel gains (1=default) or average gain equal to 1 (0) must be used  
 UseIndividualChannelGain 1
 
