Veto changes after MC Data tuning

--- a/PadmeReco/config/PVeto.cfg
+++ b/PadmeReco/config/PVeto.cfg
@@ -25,8 +25,10 @@ NumberOfSamplesPedestal		50
 #Multihit [0- SingleHit, 1- Multihit with TSpectrum]
 Multihit			1
 MinAmplitude			20
-AmplThrLow			10
-AmplThrHigh			20
+#AmplThrLow			10
+#AmplThrHigh			20
+AmplThrLow			6
+AmplThrHigh			6
 UsePulseProcessing		0
 
 [TimeCalibration]
@@ -222,10 +224,13 @@ CalibrationFile 1
 
 
 [RECOCLUSTER]
-ClusterDeltaTimeMax            5.
+#ClusterDeltaTimeMax            5.
+ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
-ClusterEnergyThresholdForHit   2.
-ClusterEnergyThresholdForSeed  3.
+#ClusterEnergyThresholdForHit   2.
+#ClusterEnergyThresholdForSeed  3.
+ClusterEnergyThresholdForHit   0.1
+ClusterEnergyThresholdForSeed  0.1
 ClusterTLowForHit              -100.
 #ClusterTHighForHit              180.
 ClusterTHighForHit              300.
