--- a/PadmeReco/config/EVeto.cfg
+++ b/PadmeReco/config/EVeto.cfg
@@ -26,18 +26,24 @@ NumberOfSamplesPedestal		50
 Multihit			1
 #MinAmplitude			40
 MinAmplitude			20
-AmplThrLow			10
-AmplThrHigh			20
+#AmplThrLow			10
+#AmplThrHigh			20
+AmplThrLow			6
+AmplThrHigh			6
 UsePulseProcessing		0
 
 
 [RECOCLUSTER]
-ClusterDeltaTimeMax            5.
+#ClusterDeltaTimeMax            5.
+ClusterDeltaTimeMax            4.
 ClusterDeltaCellMax            2
-ClusterEnergyThresholdForHit   2.
-ClusterEnergyThresholdForSeed  3.
+#ClusterEnergyThresholdForHit   2.
+#ClusterEnergyThresholdForSeed  3.
+ClusterEnergyThresholdForHit   0.1
+ClusterEnergyThresholdForSeed  0.1
 ClusterTLowForHit              -100.
-ClusterTHighForHit              220.
+#ClusterTHighForHit              220.
+ClusterTHighForHit              300.
 
 [Output]
 Hits            1
