correction to ecal pedestals calculation and some configuration parameters

--- a/PadmeReco/config/ECal.cfg
+++ b/PadmeReco/config/ECal.cfg
@@ -46,7 +46,7 @@ PedestalOffset     		50
 NumberOfSamplesPedestal		50
 ### Multihit = 0 (reco single hit / channel); 1 (mulihit)
 ### In MC Multihit = 0 (reco single hit / channel); 1 (ideal multihit);  2 (mulihit with E>20 MeV for hits next to first); -2 (single hit with time compression)
-Multihit			1
+Multihit			0
 MinAmplitude			20
 AmplThrLow			10
 AmplThrHigh			20
@@ -54,6 +54,9 @@ AmplThrHigh			20
 PedestalMode                    0 
 UseIntegralCorrection           1
 UseSaturationCorrection         1
+DeteriorateHitEnResolution	0
+DeteriorateHitTimeResolution	   0
+BunchStructureSAC_runJuly       0
 
 
 
@@ -76,7 +79,7 @@ ClusterDeteriorateEnergyResolution 0
 [Output]
 Hits            1
 Clusters        1
-Analog          1 #Save ECal analog signals only if Debug mode is enabled
+Analog          0 #Save ECal analog signals only if Debug mode is enabled
 
 [EnergyCalibration]
 #UseCalibration = 0 or >0; either calibration is used or not 
