Bug fixed on debug mode, ZSup studies histogram added to the debug histos list

--- a/PadmeReco/config/SAC.cfg
+++ b/PadmeReco/config/SAC.cfg
@@ -41,6 +41,7 @@ ClusterizationAlgo    2
 [Output]
 Hits            1
 Clusters        1
+Analog          1
 
 [EnergyCalibration]
 Common_EnergyScale 1.
